2004-06-23 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	Changes in LOTS of files to cleanup gtk-doc usage and 
	suppress gtk-doc warnings.	    

2004-06-21  David Malcolm  <dmalcolm@redhat.com>

	* cong-file-properties.c, cong-util.c, cong-util.h, plugin-validate.c

	Implemented cong_util_run_add_dtd_dialog, used by File->Properties dialog and the Validation plugin

	* cong-util.c (cong_util_run_add_dtd_dialog): 

	New placeholder function

2004-06-21 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
    
	* plugin-validate.c : Show details of validation.
	* cong-dialog.c : Fix layout of alert widget contents.

2004-06-21  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-plugin.c (cong_ui_new_document_from_manufactured_xml): 

	Allow the creation of new documents with no dispspec

	* Makefile.am, cong-app.c, cong-fake-plugin-hooks.h, plugin-arbitrary.c: 

	Added new plugin for creating documents of arbitrary type

2004-06-20  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-editor-lang.c, cong-attribute-editor.[ch]:
 	Add new function cong_attribute_editor_try_set_value and
 	use it in all attribute editors. Add block of signals in
 	ui change to make operation safer.

	* Makefile.am, cong-glade.[ch], cong-attribute-editor.[ch], cong-util.[ch] : 
 	New file cong-glade that should contain all glade operation in cong.
 
2004-06-20  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-file-import.c, cong-file-selection.h, cong-plugin.c, cong-service-importer.c, cong-service-importer.h, file.c, plugin-docbook.c, plugin-dtd.c, plugin-sgml.c:

	Big overhail of File->Import UI, making use of GtkFileFilter (see bug #144713)

	* cong-file-export.c, cong-file-import.c, cong-file-open.c, cong-file-save.c, cong-file-selection.h, file.c, plugin-save-dispspec.c

	Added list of file filters as an argument; fixed buttons

	-- 0.7.13 --
